--- a/mapping/package.json
+++ b/mapping/package.json
@@ -12,7 +12,9 @@
     "@google/generative-ai": "^0.24.1",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sharp": "^0.33.0",
+    "@huggingface/inference": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
